--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Tauri build output
+src-tauri/target/
+
+# Rust cache
+**/*.rs.bk
+
+# Logs
+*.log
